--- a/app/globals.css
+++ b/app/globals.css
@@ -18,10 +18,12 @@
 
 body {
   color: rgb(var(--foreground-rgb));
-  background-color: rgb(248,248,255);
+  background-color: rgb(248, 248, 255);
 }
 
-
+.overflow-scroll-none::-webkit-scrollbar {
+  display: none;
+}
 
 svg#freepik_stories-programmer:not(.animated) .animable {
   opacity: 1000;
